--- a/translations/set_of_translations_German_20240305124901525466_small_json_4.json
+++ b/translations/set_of_translations_German_20240305124901525466_small_json_4.json
@@ -2,7 +2,8 @@
     "signUp": {
         "SignUp": [
             [
-                "YOUR_TRANSLATION"
+                "YOUR_TRANSLATION",
+                "Hier Anmelden"
             ]
         ]
     }
