still adding ranked choice vote but has advantages...

--- a/translations/sets/set_of_translations_German_20240306020459948393_small_json_2.json
+++ b/translations/sets/set_of_translations_German_20240306020459948393_small_json_2.json
@@ -2,8 +2,10 @@
     "signUp": {
         "Account": [
             [
-                "Ihr deutscher Account-Name",
-                "Dein deutscher Benutzername"
+                "Ihr_ACCOUNT_Name",
+                "Ihr_KontoName",
+                "YOUR_ACCOUNT_NAME",
+                "Ihr_KontoName"
             ]
         ],
         "FirstName": [],
