--- a/translations/sets/set_of_translations_German_20240309220357994990_small_json_2.json
+++ b/translations/sets/set_of_translations_German_20240309220357994990_small_json_2.json
@@ -1,9 +1,10 @@
 {
     "signUp": {
         "Account": [
-            "Ihr Konto Name",
-            ") zu übersetzen: ",
-            "Benutzername"
+            "Ihr Kontenname",
+            "Ihr Kontoname de",
+            "DeinBenutzername",
+            "DeinBenutzername"
         ],
         "FirstName": [],
         "Password": [],
