--- a/todo.txt
+++ b/todo.txt
@@ -2,4 +2,8 @@
 - maybe make an instruct...doc maker reader...thing
 - convert from csv to jsonl?
 - maybe convert csv to dict (like json to dict) to handle questions?
-- 
+
+for report:
+- add error log
+- add time to generate
+- add length of output
